--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>Eureka-server</module>
         <module>Gateway</module>
         <module>ms-locations-events</module>
+        <module>core-lib</module>
+        <module>ms-auth</module>
     </modules>
 
     <dependencies>
@@ -45,6 +47,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
         </dependency>
 
     </dependencies>
