--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>ms-locations-events</module>
         <module>core-lib</module>
         <module>ms-auth</module>
+        <module>ms-routes</module>
     </modules>
 
     <dependencies>
@@ -54,6 +55,19 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.0</version>
         </dependency>
+
+
+<!--        <dependency>-->
+<!--            <groupId>com.h2database</groupId>-->
+<!--            <artifactId>h2</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.postgresql</groupId>-->
+<!--            <artifactId>postgresql</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
+
 
     </dependencies>
     <dependencyManagement>
